# Brindi

./: .env.example  .gitignore  LICENSE  README.md
apps/ai-service/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
apps/ai-service/app/: config.py  db.py  dependencies.py  gemini.py  logging_config.py  main.py  models.py  security.py
apps/ai-service/app/routers/: health.py  ocr.py  quiz.py  usage.py
apps/ai-service/tests/: conftest.py  test_cascade.py  test_db_integration.py  test_endpoints.py  test_extraction.py  test_money.py  test_quiz.py
apps/api/: .dockerignore  Dockerfile  docker-entrypoint.sh  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/prisma/seed-data/: quiz-fallback.es.json
apps/api/src/: app.module.ts  main.ts
apps/api/src/auth/: auth.constants.ts  auth.controller.ts  auth.module.ts  auth.service.ts
apps/api/src/config/: app.constants.ts  env.validation.ts
apps/api/src/health/: health.controller.ts
apps/api/src/prisma/: prisma.service.ts
apps/api/src/quiz/: quiz.controller.ts  quiz.service.ts
apps/api/src/users/: user.mapper.ts  users.controller.ts  users.service.ts
apps/web/: Dockerfile  next.config.ts  package-lock.json  package.json
apps/web/messages/: en.json  es.json
apps/web/public/: sw.js
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  manifest.ts
apps/web/src/components/: locale-switcher.tsx  module-page.tsx  providers.tsx  pwa-register.tsx  (+1 more)
infra/: docker-compose.yml
scripts/: setup-local.sh
(+67 files in other folders)
